Fix tdf#96523 : Correct the behavior when Ctrl key is pressed

Also changed the bool member bDoneInitRef to bInRefMode which
better indicate what it does.

Change-Id: I1698202add7876b89c95f737d4b5ad2243af31ab
Reviewed-on: https://gerrit.libreoffice.org/20836
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>